--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,7 +1,7 @@
 @font-face{
     font-family: "Lovely Home";
     src:local('Lovely Home'), 
-    url("/home/ishita/portfolio/src/assets/LovelyHome-9aBZ.ttf") format('truetype');
+    url('/src/Components/LovelyHome-9aBZ.ttf') format('truetype');
 
 }
 
