--- a/src/Components/ProgressBar.css
+++ b/src/Components/ProgressBar.css
@@ -18,5 +18,13 @@
     color: white;
     font-weight: bold;
     border-radius: 5px 0 0 5px;
+    justify-content: flex-start;
 }
 
+
+.progress-bar-text {
+    color: black;
+    font-size: 30px;
+    margin-left: 10px;
+    font-weight: 400;
+}
